--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+
+  <nav class="navbar-secondary text-white mb-4">
+    <div class="container">
+      <h2 class="site-title"> Sani css</h2>
+      <p>Hi this is bm sani</p>
+   </div>
+  </nav>
     <div class="container">
 
     <!-- colors -->
